[project]
name = "waivern-connectors-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Ruan Comelli", email = "ruancomelli@gmail.com" }]
requires-python = ">=3.10"
dependencies = ["pydantic>=2.11.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
