[project]
name = "waivern-wordpress-plugin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Ruan Comelli", email = "ruancomelli@gmail.com" }]
requires-python = ">=3.10.8"
dependencies = ["waivern-analyser"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
waivern-analyser = { workspace = true }

[project.entry-points."waivern-plugins"]
wordpress = "waivern_wordpress_plugin:WordpressPlugin"
