[project]
name = "waivern-rulesets-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ruan Comelli", email = "ruancomelli@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "waivern-connectors-core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
waivern-connectors-core = { workspace = true }
